<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Action Bar</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">welcome</string>
     <string name="search_text">Search</string>
        <string name="help_text">help</string>
        <string name="light_theme_activity">set Light action bar</string>
        <string name="overlay_activity">set overlay action bar</string>

</resources>
