<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    
    <item
        android:id="@+id/help_button"
        android:title="@string/help_text"
        android:showAsAction="ifRoom" 
        />
    <item
        android:id="@+id/search_button"
        android:title="@string/search_text"
        android:showAsAction="ifRoom" 
        />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"
        
        />
     <item
        android:id="@+id/light_theme_activity_item"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/light_theme_activity"/>
      <item
        android:id="@+id/overlay_activity_item"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/overlay_activity"/>
    
    

</menu>
